--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.elishanto.schoolconnect" >
+    package="com.elishanto.schoololoconnect" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -10,18 +10,18 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.android.vending.BILLING" />
     <permission android:protectionLevel="signature"
-        android:name="com.elishanto.schoolconnect.permission.C2D_MESSAGE" />
+        android:name="com.elishanto.schoololoconnect.permission.C2D_MESSAGE" />
     <uses-permission android:name="com.elishanto.schoolconnect.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".SchoolConnect"
+        android:name="com.elishanto.schoololoconnect.SchoolConnect"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activity.LoginActivity"
+            android:name="com.elishanto.schoololoconnect.activity.LoginActivity"
             android:theme="@style/LoginTheme"
             android:windowSoftInputMode="stateAlwaysHidden" >
             <intent-filter>
@@ -30,11 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity" >
+        <activity android:name="com.elishanto.schoololoconnect.activity.MainActivity" >
         </activity>
-        <activity android:name=".activity.SettingsActivity" android:label="Настройки">
+        <activity android:name="com.elishanto.schoololoconnect.activity.SettingsActivity" android:label="Настройки">
         </activity>
-        <activity android:name=".activity.TaskActivity">
+        <activity android:name="com.elishanto.schoololoconnect.activity.TaskActivity">
         </activity>
         <service android:name="com.parse.PushService" />
         <receiver android:name="com.parse.ParsePushBroadcastReceiver"
